# auto_oficios

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  ai_context.md  auto_oficios.py  auto_oficios.spec  config.json  generate_icon.py  pyproject.toml  pyrightconfig.json  pytest.ini  ui.py
.github/agents/: officeletters-dev.agent.md
.github/workflows/: ci.yml
scripts/: generate_icon.py
src/z7_officeletters/: __init__.py  __main__.py  constants.py
src/z7_officeletters/core/: __init__.py  ai.py  api_key.py  authors.py  config.py  documents.py  files.py  logging_setup.py  recipients.py
src/z7_officeletters/gui/: __init__.py  app.py  constants.py
src/z7_officeletters/gui/dialogs/: __init__.py  ai_api.py  api_key.py  config_editor.py  confirmation.py  date_picker.py  prompt_editor.py
src/z7_officeletters/gui/workers/: __init__.py  processor.py
templates/: modelo_mocao.docx  modelo_requerimento_pesar.docx
tests/: conftest.py  test_auto_oficios.py
tests/core/: test_ai.py  test_api_key.py  test_authors.py  test_documents.py  test_files.py  test_logging.py  test_recipients.py
